feat(JAQPOT-4): add user id on model
