# src/main/kotlin/org/jaqpot/api/service/model/ModelService.kt
@@ -1,6 +1,7 @@
 package org.jaqpot.api.service.model
 
 import org.jaqpot.api.ModelApiDelegate
+import org.jaqpot.api.auth.AuthenticationFacade
 import org.jaqpot.api.entity.Model
 import org.jaqpot.api.mapper.toDto
 import org.jaqpot.api.mapper.toEntity
@@ -14,10 +15,12 @@ import java.net.URI
 
 @Service
 class ModelService(
-    private val modelRepository: ModelRepository
+    private val modelRepository: ModelRepository,
+    private val authenticationFacade: AuthenticationFacade
 ) : ModelApiDelegate {
     override fun createModel(modelDto: ModelDto): ResponseEntity<Unit> {
-        val model = modelRepository.save(modelDto.toEntity())
+        val userId = authenticationFacade.userId
+        val model = modelRepository.save(modelDto.toEntity(userId))
         val location: URI = ServletUriComponentsBuilder
             .fromCurrentRequest().path("/{id}")
             .buildAndExpand(model.id).toUri()
@@ -29,5 +32,10 @@ class ModelService(
         return ResponseEntity.ok().body(models.map(Model::toDto))
     }
 
+    override fun getModelById(id: Long): ResponseEntity<ModelDto> {
+        val model = modelRepository.findById(id)
+        return model.map { ResponseEntity.ok(it.toDto()) }
+            .orElse(ResponseEntity.notFound().build())
+    }
 }
 
